--- a/backends-common/pom.xml
+++ b/backends-common/pom.xml
@@ -37,6 +37,7 @@
         <module>cassandra</module>
         <module>elasticsearch-v7</module>
         <module>jpa</module>
+        <module>pulsar</module>
         <module>rabbitmq</module>
     </modules>
 
