--- a/pom.xml
+++ b/pom.xml
@@ -2606,6 +2606,11 @@
                 <version>${junit.vintage.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.mock-server</groupId>
+                <artifactId>mockserver-netty</artifactId>
+                <version>5.11.2</version>
+            </dependency>
+            <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
                 <version>3.7.7</version>
