--- a/mdn/pom.xml
+++ b/mdn/pom.xml
@@ -92,7 +92,7 @@
             </plugin>
             <plugin>
                 <groupId>io.github.evis</groupId>
-                <artifactId>scalafix-maven-plugin</artifactId>
+                <artifactId>scalafix-maven-plugin_2.13</artifactId>
                 <configuration>
                     <config>${project.parent.basedir}/.scalafix.conf</config>
                 </configuration>
