--- a/pom.xml
+++ b/pom.xml
@@ -2894,8 +2894,8 @@
                 </plugin>
                 <plugin>
                     <groupId>io.github.evis</groupId>
-                    <artifactId>scalafix-maven-plugin</artifactId>
-                    <version>0.1.4_0.9.23</version>
+                    <artifactId>scalafix-maven-plugin_2.13</artifactId>
+                    <version>0.1.4_0.9.33</version>
                     <configuration>
                         <config>${basedir}/.scalafix.conf</config>
                         <mode>CHECK</mode>
