--- a/server/container/guice/blob/deduplication-gc/pom.xml
+++ b/server/container/guice/blob/deduplication-gc/pom.xml
@@ -48,6 +48,11 @@
         </dependency>
         <dependency>
             <groupId>${james.groupId}</groupId>
+            <artifactId>event-sourcing-event-store-memory</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>${james.groupId}</groupId>
             <artifactId>james-server-guice-webadmin-data</artifactId>
         </dependency>
         <dependency>
