--- a/server/apps/distributed-app/sample-configuration/blob.properties
+++ b/server/apps/distributed-app/sample-configuration/blob.properties
@@ -14,6 +14,18 @@ implementation=s3
 # Mandatory, Allowed values are: true, false
 deduplication.enable=false
 
+# deduplication.family needs to be incremented every time the deduplication.generation.duration is changed
+# Positive integer, defaults to 1
+# deduplication.gc.generation.family=1
+
+# Duration of generation.
+# Deduplication only takes place within a singe generation.
+# Only items two generation old can be garbage collected. (This prevent concurrent insertions issues and
+# accounts for a clock skew).
+# deduplication.family needs to be incremented everytime this parameter is changed.
+# Duration. Default unit: days. Defaults to 30 days.
+# deduplication.gc.generation.duration=30days
+
 # ========================================= Encryption ========================================
 # If you choose to enable encryption, the blob content will be encrypted before storing them in the BlobStore.
 # Warning: Once this feature is enabled, there is no turning back as turning it off will lead to all content being
