--- a/server/container/guice/blob/deduplication-gc/pom.xml
+++ b/server/container/guice/blob/deduplication-gc/pom.xml
@@ -53,6 +53,10 @@
         </dependency>
         <dependency>
             <groupId>${james.groupId}</groupId>
+            <artifactId>james-server-guice-configuration</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${james.groupId}</groupId>
             <artifactId>james-server-guice-webadmin-data</artifactId>
         </dependency>
         <dependency>
