--- a/pom.xml
+++ b/pom.xml
@@ -2170,6 +2170,11 @@
                 <version>2.6.0</version>
             </dependency>
             <dependency>
+                <groupId>com.jcraft</groupId>
+                <artifactId>jzlib</artifactId>
+                <version>1.1.3</version>
+            </dependency>
+            <dependency>
                 <groupId>com.linagora</groupId>
                 <artifactId>metrics-elasticsearch-reporter</artifactId>
                 <version>${es-reporter.version}</version>
