JAMES-3715 Add tests for IMAP COMPRESS transport layer
Commons-net do not look like it supports compression thus I resorted
to use javax.mail

Compression is one of the untested features that broke during the
Netty 4 upgrade thus I take this opportunity to add more tests.

--- a/server/protocols/protocols-imap4/pom.xml
+++ b/server/protocols/protocols-imap4/pom.xml
@@ -143,6 +143,12 @@
             <groupId>org.mock-server</groupId>
             <artifactId>mockserver-netty</artifactId>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.jcraft</groupId>
+                    <artifactId>jzlib</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
