[Clean code] Pretty name of maven submodule

--- a/backends-common/cassandra/pom.xml
+++ b/backends-common/cassandra/pom.xml
@@ -28,7 +28,7 @@
     </parent>
 
     <artifactId>apache-james-backends-cassandra</artifactId>
-    <name>Apache James Cassandra backend</name>
+    <name>Apache James :: Backends Common :: Cassandra</name>
 
     <properties>
         <cassandra.driver.version>3.11.0</cassandra.driver.version>
