--- a/mailet/standard/pom.xml
+++ b/mailet/standard/pom.xml
@@ -30,7 +30,7 @@
     <artifactId>apache-mailet-standard</artifactId>
     <packaging>jar</packaging>
 
-    <name>Apache James :: Standard Mailets</name>
+    <name>Apache James :: Mailet :: Standard</name>
     <description>Apache James Standard Mailets is a rich collection of general purpose mailets
         with limited dependencies. These mailets can be used in any mailet container.</description>
     <url>http://james.apache.org/mailet/standard/</url>
