--- a/mpt/impl/smtp/cassandra-rabbitmq-object-storage/pom.xml
+++ b/mpt/impl/smtp/cassandra-rabbitmq-object-storage/pom.xml
@@ -28,7 +28,7 @@
     <artifactId>apache-james-mpt-smtp-cassandra-rabbitmq-object-storage</artifactId>
     <packaging>jar</packaging>
 
-    <name>Apache James MPT SMTP Cassandra RabbitMQ Object Storage</name>
+    <name>Apache James :: MPT :: SMTP :: Cassandra - RabbitMQ - Object Storage</name>
 
     <dependencies>
         <dependency>
