--- a/mpt/impl/smtp/core/pom.xml
+++ b/mpt/impl/smtp/core/pom.xml
@@ -28,7 +28,7 @@
     <artifactId>apache-james-mpt-smtp-core</artifactId>
     <packaging>jar</packaging>
 
-    <name>Apache James MPT SMTP Core</name>
+    <name>Apache James :: MPT :: SMTP :: Core</name>
 
     <dependencies>
         <dependency>
