--- a/server/container/guice/testing/custom-mailets-implementation/pom.xml
+++ b/server/container/guice/testing/custom-mailets-implementation/pom.xml
@@ -27,6 +27,7 @@
     </parent>
 
     <artifactId>custom-mailets-implementation</artifactId>
+    <name>Apache James :: Server :: Guice :: Mailet :: Custom testing mailets :: implement</name>
 
     <dependencies>
         <dependency>
