--- a/server/container/guice/testing/dependency/pom.xml
+++ b/server/container/guice/testing/dependency/pom.xml
@@ -28,8 +28,8 @@
 
     <artifactId>james-server-guice-custom-mailets-dependency</artifactId>
 
-    <name>Apache James :: Server :: Guice :: Mailet :: Custom testing mailets :: dependency</name>
-    <description>Dependency not part of James classpath that custom mailets can depends on</description>
+    <name>Apache James :: Server :: Guice :: Mailet :: Custom testing mailets :: Dependency</name>
+    <description>Dependency not part of James classpath that custom mailets can depend on</description>
 
     <dependencies>
         <dependency>
