--- a/mailet/mailetdocs-maven-plugin/pom.xml
+++ b/mailet/mailetdocs-maven-plugin/pom.xml
@@ -29,7 +29,7 @@
     <artifactId>mailetdocs-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
 
-    <name>Apache James :: Mailetdocs Maven Plugin</name>
+    <name>Apache James :: Mailet :: Docs Maven Plugin</name>
     <description>This plugin generates documentation for Mailets by collating
         information available from implementation source.</description>
     <url>http://james.apache.org/mailet/maven-mailetdocs-plugin/</url>
