--- a/mpt/core/pom.xml
+++ b/mpt/core/pom.xml
@@ -26,7 +26,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>apache-james-mpt-core</artifactId>
-    <name>Apache James MPT Core</name>
+    <name>Apache James :: MPT :: Core</name>
     <description>Apache James Mail Protocol Tester (MPT) is a library providing a framework for the 
       scriptable functional testing of ASCII based line protocols.</description>
     <url>http://james.apache.org/mpt/main</url>
