--- a/mpt/impl/imap-mailbox/inmemory/pom.xml
+++ b/mpt/impl/imap-mailbox/inmemory/pom.xml
@@ -28,7 +28,7 @@
     </parent>
 
     <artifactId>apache-james-mpt-imapmailbox-inmemory</artifactId>
-    <name>Apache James MPT Imap Mailbox - InMemory</name>
+    <name>Apache James :: MPT :: Imap Mailbox :: InMemory</name>
 
     <dependencies>
         <dependency>
