JAMES-3719 Reactive textual content extraction with Apache Tika
Tika was called from reactive code and was doing blocking HTTP calls from within
the MIME parsing code.

This generate:
 - An unneeded thread consumption as we have some threads waiting for Tika
   response
 - Potentially dangerous blocking calls: for instance the InVM event bus was
  doing such calls on the parallel thread pool (where it is critical NOT to
  block)...
 - Also the connection was opened on a per-call basis, not being reused.

 We introduce the following changes:
  - Reactification of the TextExtractor API
  - We re-implement the HTTP calls done by TikaTextExtractor with reactor-netty
  which allows us to pool HTTP connections and do this in a non-blocking
  reactive fashion.
  - We provide a reactive cache using the caffeine caching library - Guava
  caches are blocking thus not an option...
  - We uncouple the text extraction from the MIME parsing phase by introducing
  an intermediate POJO. Doing so requires us to do a post-parsing copy of
  content.

 TODO only do the copy if necessary. We don't want to copy large attachments for whom no text is going to be extracted...

  - Finally we reactify index content generation for ElasticSearch code.

--- a/mailbox/tika/pom.xml
+++ b/mailbox/tika/pom.xml
@@ -64,8 +64,16 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.projectreactor.netty</groupId>
+            <artifactId>reactor-netty</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
