JAMES-3719 Reactive textual content extraction with Apache Tika
Tika was called from reactive code and was doing blocking HTTP calls from within
the MIME parsing code.

This generate:
 - An unneeded thread consumption as we have some threads waiting for Tika
   response
 - Potentially dangerous blocking calls: for instance the InVM event bus was
  doing such calls on the parallel thread pool (where it is critical NOT to
  block)...
 - Also the connection was opened on a per-call basis, not being reused.

 We introduce the following changes:
  - Reactification of the TextExtractor API
  - We re-implement the HTTP calls done by TikaTextExtractor with reactor-netty
  which allows us to pool HTTP connections and do this in a non-blocking
  reactive fashion.
  - We provide a reactive cache using the caffeine caching library - Guava
  caches are blocking thus not an option...
  - We uncouple the text extraction from the MIME parsing phase by introducing
  an intermediate POJO. Doing so requires us to do a post-parsing copy of
  content.

 TODO only do the copy if necessary. We don't want to copy large attachments for whom no text is going to be extracted...

  - Finally we reactify index content generation for ElasticSearch code.

--- a/pom.xml
+++ b/pom.xml
@@ -2091,6 +2091,11 @@
                 <version>${jackson.version}</version>
             </dependency>
             <dependency>
+                <groupId>com.github.ben-manes.caffeine</groupId>
+                <artifactId>caffeine</artifactId>
+                <version>3.0.5</version>
+            </dependency>
+            <dependency>
                 <groupId>com.github.dpaukov</groupId>
                 <artifactId>combinatoricslib3</artifactId>
                 <version>3.3.2</version>
