--- a/pom.xml
+++ b/pom.xml
@@ -3209,6 +3209,10 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.22.2</version>
                     <configuration>
+                        <systemPropertyVariables>
+                            <!--https://issues.apache.org/jira/browse/JAMES-3724-->
+                            <james.ligecycle.leak.detection.mode>testing</james.ligecycle.leak.detection.mode>
+                        </systemPropertyVariables>
                         <argLine>-Xms512m -Xmx1024m</argLine>
                         <reuseForks>true</reuseForks>
                         <!-- Fail tests longer than 20 minutes, prevent form random locking tests -->
